--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "html-react-parser": "^0.9.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-id-swiper": "^2.3.2",
