--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-id-swiper": "^2.3.2",
+    "react-infinite-scroll-component": "^4.5.3",
+    "react-infinite-scroller": "^1.2.4",
+    "react-lazyload": "^2.6.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -23,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy":"aws s3 sync build/ s3://all-about-football --acl public-read"
+    "deploy": "aws s3 sync build/ s3://all-about-football --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
