--- a/package.json
+++ b/package.json
@@ -5,28 +5,27 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "html-react-parser": "^0.9.1",
+    "html-react-parser": "^0.13.0",
     "js-cookie": "^2.2.1",
+    "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-id-swiper": "^2.3.2",
-    "react-infinite-scroll-component": "^4.5.3",
-    "react-infinite-scroller": "^1.2.4",
-    "react-lazyload": "^2.6.2",
-    "react-redux": "^7.1.1",
+    "react-id-swiper": "2.3.2",
+    "react-lazyload": "^3.0.0",
+    "react-redux": "^7.2.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.0",
+    "react-scripts": "3.4.3",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.0",
-    "swiper": "^4.5.0"
+    "styled-components": "^5.1.1",
+    "swiper": "4.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "aws s3 sync build/ s3://all-about-football --acl public-read"
   },
@@ -46,6 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.1.6",
     "typescript": "^3.9.7"
   }
 }
